# The-Forge-CMake

./: .gitignore  CMakeLists.txt  LICENSE  README.md  triangle.cpp
Examples/: 01_Transformations.cpp
Shaders/dx/: triangle.vert
Shaders/vk/: triangle.frag  triangle.vert
